fix body overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,8 @@ body {
     margin: 0;
 
     cursor: none;
+
+    overflow: hidden;
 }
 
 #cursor {
